implement review suggestions