@@ -6,7 +6,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Comparator;
 import java.util.List;
 import org.junit.jupiter.api.BeforeAll;
@@ -29,8 +28,8 @@ public class StreamIntegrationTest {
 
   @BeforeAll
   static void setUpTmpDirectory() throws IOException {
-    new File("serTmp").mkdirs();
-    if (!Files.exists(Path.of("serTmp"))) {
+    new File("tmp/wta/streams/serialization/").mkdirs();
+    if (!Files.exists(Path.of("tmp/wta/streams/serialization/"))) {
       throw new IOException();
     }
   }
@@ -206,7 +205,7 @@ public class StreamIntegrationTest {
   }
 
   @Test
-  void serializationFilesActuallyGetGeneratedAndDeleted() throws IOException, InterruptedException {
+  void serializationFilesActuallyGetGeneratedAndDeleted() throws IOException {
     Stream<Integer> stream = createSerializingStreamOfNaturalNumbers(10, 10);
     for (int i = 1; i <= 10; i++) {
       stream.addToStream(i);
@@ -217,10 +216,10 @@ public class StreamIntegrationTest {
     for (int i = 1; i <= 10; i++) {
       stream.addToStream(i);
     }
-    Path directory = Paths.get("serTmp");
+    Path directory = Path.of("tmp/wta/streams/serialization/");
     long fileCount = Files.list(directory).count();
     assertThat(fileCount).isEqualTo(3);
     Stream.deleteAllSerializedFiles();
-    assertThat(!Files.exists(Path.of("serTmp"))).isTrue();
+    assertThat(!Files.exists(Path.of("tmp/wta/streams/serialization/"))).isTrue();
   }
 }
